[gd_scene load_steps=11 format=3 uid="uid://drgy2acdocr8o"]

[ext_resource type="Script" path="res://src/Actors/scripts/enemy/enemy.gd" id="1_05rl1"]
[ext_resource type="Texture2D" path="res://assets/sheet_preda.png" id="2_kcwga"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k372h"]
size = Vector2(153, 38.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_1jfco"]

[sub_resource type="CircleShape2D" id="CircleShape2D_utags"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cr5ed"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lkveg"]
atlas = ExtResource("2_kcwga")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6scdj"]
atlas = ExtResource("2_kcwga")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulnby"]
atlas = ExtResource("2_kcwga")
region = Rect2(48, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_cu18y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkveg")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6scdj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulnby")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_05rl1")

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2

[node name="detection_colision" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_k372h")
debug_color = Color(0, 0.647059, 0.262745, 0.419608)

[node name="enemy_colision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_1jfco")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_utags")
debug_color = Color(0.996078, 0, 0.180392, 0.419608)

[node name="attack_cooldown" type="Timer" parent="."]
autostart = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_cr5ed")
debug_color = Color(0.219608, 0.509804, 1, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_cu18y")
animation = &"walking"

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
